--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,12 @@
   <title>The Tech Blog</title>
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
+  
+  <meta name="description" content="tech-blog" />
+<meta name="title" property="og:title" content="_" />
+<meta property="og:type" content="tech" />
+<meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51744724333_7551a21b28_z.jpg"/>
+<meta name="description" property="og:description" content="tech-blog" /><meta name="author" content="Jemel Willams" />
 </head>
 
 <body class="flex-column min-100-vh">
