--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,8 @@
 <meta name="title" property="og:title" content="Tech Blog" />
 <meta property="og:type" content="Tech Blog" />
 <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51744724333_7551a21b28_z.jpg"/>
-<meta name="description" property="og:description" content="Tech Blog" /><meta name="author" content="Jemel Willams" />
+<meta name="description" property="og:description" content="Tech Blog" />
+<meta name="author" content="Jemel Willams" />
 </head>
 
 <body class="flex-column min-100-vh">
